# ccdhmodel

./: .env  .gitignore  404.html  AUTHORS  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  CRDCH_MODEL.md  ChangeLog  LICENSE  MAINTAINERS.md  MANIFEST.in  Makefile  PYPI_SETUP.md  Pipfile  README.md  environment.sh  gen_model.sh  index.html  index.md  logging.ini  mam-experimentation.md  mam-experimentation.py  mkdocs.yml  pyproject.toml  rename-codeable-concepts-to-enum.sh  requirements-dev.txt  requirements.txt  search.html  setup.cfg  setup.py  tox.ini  versions.json
CDM.BiologicallyDerivedProduct/: index.html
CDM.Exposure/: index.html
CDM.Organization/: index.html
CDM.Patient/: index.html
CDM.Report/: index.html
CDM.ResearchProject/: index.html
CDM.ResearchSubject/: index.html
CDM.Specimen/: index.html
CDM.SpecimenContainer/: index.html
CDM.SpecimenCreationActivity/: index.html
CDM.SpecimenProcessingActivity/: index.html
CDM.SpecimenStorageActivity/: index.html
CDM.SpecimenTransportActivity/: index.html
cDM.BiologicallyDerivedProduct__description/: index.html
cDM.BiologicallyDerivedProduct__growth_rate/: index.html
cDM.BiologicallyDerivedProduct__id/: index.html
cDM.BiologicallyDerivedProduct__passage_number/: index.html
cDM.BiologicallyDerivedProduct__product_type/: index.html
cDM.Exposure__alcohol_use/: index.html
cDM.Exposure__environmental/: index.html
cDM.Exposure__id/: index.html
cDM.Exposure__identifier/: index.html
cDM.Exposure__related_patient/: index.html
cDM.Exposure__tobacco_use/: index.html
cDM.Organization__alias/: index.html
cDM.Organization__id/: index.html
cDM.Organization__identifier/: index.html
cDM.Organization__name/: index.html
cDM.Organization__organization_type/: index.html
cDM.Patient__adverse_events/: index.html
cDM.Patient__given_name/: index.html
cDM.Patient__id/: index.html
cDM.Patient__identifier/: index.html
cDM.Patient__taxon/: index.html
cDM.Report__id/: index.html
cDM.ResearchProject__date_ended/: index.html
cDM.ResearchProject__date_iacuc_approval/: index.html
cDM.ResearchProject__date_started/: index.html
cDM.ResearchProject__description/: index.html
cDM.ResearchProject__description_shortened/: index.html
cDM.ResearchProject__id/: index.html
cDM.ResearchProject__identifier/: index.html
cDM.ResearchProject__name/: index.html
cDM.ResearchProject__name_shortened/: index.html
cDM.ResearchProject__part_of/: index.html
cDM.ResearchProject__primary_anatomic_site/: index.html
cDM.ResearchProject__research_project_type/: index.html
cDM.ResearchProject__sponsor/: index.html
cDM.ResearchProject__url/: index.html
cDM.ResearchSubject__associated_patient/: index.html
cDM.ResearchSubject__associated_project/: index.html
cDM.ResearchSubject__description/: index.html
cDM.ResearchSubject__id/: index.html
cDM.ResearchSubject__identifier/: index.html
cDM.ResearchSubject__index_timepoint/: index.html
cDM.ResearchSubject__member_of_cohort/: index.html
cDM.ResearchSubject__member_of_study/: index.html
cDM.ResearchSubject__originating_site/: index.html
cDM.ResearchSubject__primary_disease_site/: index.html
cDM.ResearchSubject__primary_disease_type/: index.html
cDM.ResearchSubject__processed_at/: index.html
cDM.ResearchSubject__qualification_status_flag/: index.html
cDM.ResearchSubject__reference_status_flag/: index.html
cDM.ResearchSubject__study_progress/: index.html
cDM.SpecimenContainer__additive/: index.html
cDM.SpecimenContainer__charge_type/: index.html
cDM.SpecimenContainer__container_number/: index.html
cDM.SpecimenContainer__container_type/: index.html
cDM.SpecimenContainer__parent_container/: index.html
cDM.SpecimenCreationActivity__activity_type/: index.html
cDM.SpecimenCreationActivity__collected_during_visit/: index.html
cDM.SpecimenCreationActivity__collection_site/: index.html
cDM.SpecimenCreationActivity__date_ended/: index.html
cDM.SpecimenCreationActivity__date_started/: index.html
cDM.SpecimenCreationActivity__execution_condition/: index.html
cDM.SpecimenCreationActivity__id/: index.html
cDM.SpecimenCreationActivity__input_specimen/: index.html
cDM.SpecimenCreationActivity__method_type/: index.html
cDM.SpecimenCreationActivity__performed_by/: index.html
cDM.SpecimenCreationActivity__quantity_collected/: index.html
cDM.SpecimenCreationActivity__relative_order/: index.html
cDM.SpecimenCreationActivity__relative_timing/: index.html
cDM.SpecimenProcessingActivity__duration/: index.html
cDM.SpecimenProcessingActivity__performed_by/: index.html
cDM.SpecimenStorageActivity__id/: index.html
cDM.SpecimenTransportActivity__date_ended/: index.html
cDM.SpecimenTransportActivity__date_started/: index.html
cDM.SpecimenTransportActivity__execution_conditions/: index.html
cDM.SpecimenTransportActivity__id/: index.html
cDM.SpecimenTransportActivity__transport_destination/: index.html
cDM.Specimen__analyte_type/: index.html
cDM.Specimen__associated_project/: index.html
cDM.Specimen__cellular_composition_measure/: index.html
cDM.Specimen__cellular_composition_type/: index.html
cDM.Specimen__condition_status_at_collection/: index.html
cDM.Specimen__contained_in/: index.html
cDM.Specimen__creation_activity/: index.html
cDM.Specimen__derived_product/: index.html
cDM.Specimen__description/: index.html
cDM.Specimen__dimensional_measure/: index.html
cDM.Specimen__general_tissue_morphology/: index.html
cDM.Specimen__id/: index.html
cDM.Specimen__identifier/: index.html
cDM.Specimen__matched_normal_flag/: index.html
cDM.Specimen__paired_specimen_genotype_match_flag/: index.html
cDM.Specimen__parent_specimen/: index.html
cDM.Specimen__processing_activity/: index.html
cDM.Specimen__provided_by/: index.html
cDM.Specimen__qualification_status_flag/: index.html
cDM.Specimen__quality_measure/: index.html
cDM.Specimen__quantity_measure/: index.html
cDM.Specimen__reference_status_flag/: index.html
cDM.Specimen__related_diagnosis/: index.html
ccdhmodel/: ccdhmodel.py  (+4 more)
(+6501 files in other folders)
