[metadata]
# would we ever want to use pyproject.toml ?
#   yes! works with setuptools and poetry

name = crdch_model
# version

author = Center for Cancer Data Harmonization
# are we sure somebody reads this email?
author_email = centerforcancerdh@gmail.com
maintainer = Gaurav Vaidya, Sujay Patil, Mark A. Miller etc. See https://github.com/cancerDHC/ccdhmodel/graphs/contributors

# summary is alias for description
description = CRDC-H model in LinkML, developed by the Center for Cancer Data Harmonization (CCDH)

long_description = CRDC-H model in LinkML, developed by the Center for Cancer Data Harmonization (CCDH). This Python package contains the dataclasses necessary to build and operate over data objects according to the CRDC-H model.


# see also https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html 
# which says home-page is an alias for url
#   note hyphen vs underscore!
url = https://cancerdhc.github.io/ccdhmodel

# LICENSE file looks like BSD 3-clause
# license = MIT
license = MIT
python_requires = >=3.7

classifiers =
    Topic :: Scientific/Engineering :: Bio-Informatics
    Intended Audience :: Healthcare Industry
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

# MAM 2021-11-18 cancer research
keywords = 
    python
    google-sheets
    linkml
    cancer research

[options]
include_package_data = True
install_requires = linkml-runtime
py_modules = crdch_model/crdch_model
package_dir=
    =crdch_model
packages=find:

[options.packages.find]
where=crdch_model

[files]
data-files = model = model/*
    crdch_model/graphql = crdch_model/graphql/*
    crdch_model/jsonschema = crdch_model/jsonschema/*
    crdch_model/owl = crdch_model/owl/*
    crdch_model/shex = crdch_model/shex/*
    crdch_model/csv = crdch_model/csv/*


